More details for the conditions were added.
